# tf_module_training

./: .gitignore  .tflint.hcl  LICENSE  README.md  aws_env_sample  doc.py  pyproject.toml  role.py
env/.common/: main.tf  output.tf  variables.tf
env/dev/: locals.tf  main.tf  output.tf
env/prd/: README.md  locals.tf  variables.tf
modules/ec2/ec2_eip/: README.md  main.tf  output.tf  variables.tf
modules/ec2/ec2_private/: README.md  main.tf  output.tf  variables.tf
modules/eip/: README.md  main.tf  output.tf  variables.tf
modules/igw/: README.md  main.tf  output.tf  variables.tf
modules/sg/: README.md  main.tf  output.tf
modules/sg/ssh/: README.md  main.tf  variables.tf
modules/sg/ssh_bastion/: README.md  main.tf  variables.tf
modules/subnet/: README.md  main.tf  output.tf  variables.tf
modules/vpc/: README.md  main.tf  output.tf  variables.tf
