[tool.poetry]
name = "tf-training-module-sample"
version = "0.1.0"
description = "Terraform sample"
authors = ["soshi nemoto <soshi.nemoto@sharing-innovations.co.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 80
[tool.ruff.lint]
select = ["ALL"]
#select = ["N", "E", "F"]
ignore = ["ANN101", "I001", "D203", "D213"]